--- a/test/index.html
+++ b/test/index.html
@@ -1,11 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-
     <title>Document</title>
+    <link rel="stylesheet" href="./css/main.css">
+
 </head>
+
 <body>
+    <video width="100%" height="auto" autoplay loop muted controls>
+        <source src="./../화면.mp4" type="video/mp4"> 
+        대체 텍스트
+    </video>
+
+    <!-- 매드맥스 경운기 영상으로 바꾸고  글자 포토샵으로 바꿔서 png변환해서 넣기
+            body {
+            height: 4000px;
+        } 전체화면 높이값 주기
+    -->
+
     
 </body>
+
 </html>
