--- a/test/index.html
+++ b/test/index.html
@@ -38,6 +38,9 @@
 
 <body>
 
+
+ 
+
     <!-- 메인타이틀 -->
     <img src="./images/t1.png" alt="FTRK">
 
@@ -52,16 +55,29 @@
         -->
 
     <!-- 전체 네비게이션박스 -->
-    <nav class="gnb">
+    <div class="gnb">
+
         <!-- 닫기버튼 -->
         <button class="ham" onclick="yogi('-100%')">×</button>
 
+    
 
-    </a>
-</nav>
-    <img src="./images/map.png" alt="FTRK" >
+        <div id= "ct">
+            <div id="sl">
+                <img src="./images/seoul2.png" alt="">
+            </div>
 
-    <img src="./images/버튼1.png" alt="">
+            <div id="ss">
+                <img src="./images/seosan2.png" alt="">
+            </div>
+
+        </div>
+
+    </div>
+
+    
+
+
 
 </body>
 
