--- a/test/index.html
+++ b/test/index.html
@@ -64,11 +64,11 @@
 
         <div id= "ct">
             <div id="sl">
-                <img src="./images/seoul2.png" alt="">
+                <img src="./images/sc.png" alt="서울카드">
             </div>
 
             <div id="ss">
-                <img src="./images/seosan2.png" alt="">
+                <img src="./images/ssc.png" alt="서산카드">
             </div>
 
         </div>
