--- a/도깨비응용/index.html
+++ b/도깨비응용/index.html
@@ -147,9 +147,9 @@
             <!-- 하단링크 -->
             <ul class="bm">
                 <li><a href="https://artvee.com/" target="_blank">About Us</a></li>
-                <li><a href="https://artvee.com/">Terms </a></li>
-                <li><a href="https://artvee.com/">Privacy</a></li>
-                <li><a href="https://artvee.com/">Contact us </a></li>
+                <li><a href="https://artvee.com/" target="_blank">Terms </a></li>
+                <li><a href="https://artvee.com/" target="_blank">Privacy</a></li>
+                <li><a href="https://artvee.com/" target="_blank">Contact us </a></li>
             </ul>
         </footer>
     </section>
