--- a/CGV응용/index.html
+++ b/CGV응용/index.html
@@ -35,7 +35,7 @@
         <nav class="gnb">
             <ul class="glist">
                 <li>
-                    <a href="#">영화</a>
+                    <a href="#">Discography</a>
                     <!-- 서브메뉴 -->
                     <div class="smenu">
                         <ol>
@@ -55,7 +55,7 @@
                     </div>
                 </li>
                 <li>
-                    <a href="#">예매</a>
+                    <a href="#">Achievements</a>
                     <!-- 서브메뉴 -->
                     <div class="smenu">
                         <ol>
@@ -69,7 +69,7 @@
                     </div>
                 </li>
                 <li>
-                    <a href="#">극장</a>
+                    <a href="#">Quotes</a>
                     <!-- 서브메뉴 -->
                     <div class="smenu">
                         <ol>
@@ -86,7 +86,7 @@
                     </div>
                 </li>
                 <li>
-                    <a href="#">이벤트&amp;컬처</a>
+                    <a href="#">Biography</a>
                     <!-- 서브메뉴 -->
                     <div class="smenu">
                         <ol>
