--- a/CGV응용/index.html
+++ b/CGV응용/index.html
@@ -104,12 +104,13 @@
                 </li>
             </ul>
         </nav>
+        <img src="images/jazz.png" class="j" alt="">
     </header>
     <!-- 2. 메인영역 -->
     <main id="cont" class="part">
         <!-- 2-1.스크린박스 -->
         <div id="screen">
-            <iframe id="tg" src="https://www.youtube.com/embed/2hnkUpo_2yg?autoplay=1&loop=1&playlist=2hnkUpo_2yg"
+            <iframe id="tg" src="https://www.youtube.com/embed/8M4GBYFIw1c?autoplay=1&loop=1&playlist=8M4GBYFIw1c"
                 allow="autoplay"></iframe>
         </div>
         <!-- 2-2.예고편선택메뉴 -->
@@ -117,87 +118,51 @@
             <ul>
                 <li>
                     <a href="#" onclick="gogo('4Aqs-ojuE_Y');return false;">
-                        <!-- 포스터 -->
-                        <img src="images/slp11.png" class="lp" alt="">
-                        <!-- 영화정보 -->
-                        <ol class="movtxt">
-                            <li>비와 당신의 이야기</li>
-                            <li>강하늘,천우희</li>
-                            <li>드라마,멜로</li>
-                        </ol>
+                        <img src="images/oslp.png" class="lp" alt="오렌지색lp">
+                        
                     </a>
                 </li>
                 <li>
                     <a href="#" onclick="gogo('O0s8Btiv_Dg');return false;">
-                        <!-- 포스터 -->
-                        <img src="images/m2.jpg" alt="서복">
-                        <!-- 영화정보 -->
-                        <ol class="movtxt">
-                            <li>서복</li>
-                            <li>공유,박보검</li>
-                            <li>드라마</li>
-                        </ol>
+                        <img src="images/bslp.png" class="lp2" alt="검은색lp">
                     </a>
                 </li>
                 <li>
                     <a href="#" onclick="gogo('TMwaYs4H7yI');return false;">
                         <!-- 포스터 -->
-                        <img src="images/m3.jpg" alt="미나리">
-                        <!-- 영화정보 -->
-                        <ol class="movtxt">
-                            <li>미나리</li>
-                            <li>한예리,윤여정</li>
-                            <li>드라마</li>
-                        </ol>
+                        <img src="images/oslp.png" class="lp3 alt="">
                     </a>
                 </li>
                 <li>
                     <a href="#" onclick="gogo('Qh4bQK_PY90');return false;">
-                        <!-- 포스터 -->
-                        <img src="images/m4.jpg" alt="더 스파이">
-                        <!-- 영화정보 -->
-                        <ol class="movtxt">
-                            <li>더 스파이</li>
-                            <li>베네딕트 컴버배치</li>
-                            <li>스릴러</li>
-                        </ol>
+                        <img src="images/bslp.png" class="lp4 alt="">
                     </a>
                 </li>
                 <li>
                     <a href="#" onclick="gogo('tfmRVC_GADw');return false;">
-                        <!-- 포스터 -->
-                        <img src="images/m5.jpg" alt="노매드랜드">
-                        <!-- 영화정보 -->
-                        <ol class="movtxt">
-                            <li>노매드랜드</li>
-                            <li>프란시스 맥도맨드</li>
-                            <li>드라마</li>
-                        </ol>
+                        <img src="images/oslp.png" class="lp5 alt="">
+
                     </a>
                 </li>
                 <li>
                     <a href="#" onclick="gogo('Pj7CadRf82k');return false;">
-                        <!-- 포스터 -->
-                        <img src="images/m6.jpg" alt="샹치">
-                        <!-- 영화정보 -->
-                        <ol class="movtxt">
-                            <li>샹치</li>
-                            <li>시무리우,양조위</li>
-                            <li>액션,판타지</li>
-                        </ol>
+                        <img src="images/bslp.png" class="lp5 alt="">
                     </a>
                 </li>
             </ul>
         </nav>
+        <img src="images/p1.png" class="p1" alt="">
+        <img src="images/p1.png" class="p2" alt="">
     </main>
     <!-- 3. 하단영역 -->
     <footer id="info" class="part">
         <!-- 3-1.회사정보 -->
         <address>
-            <img src="images/blogo.png" alt="하단로고">
-            (04377)서울특별시 용산구 한강대로 23길 55, 아이파크몰 6층(한강로동) <br>
-            대표이사 : 최병환사업자등록번호 : 104-81-45690통신판매업신고번호 : 2017-서울용산-0662 <br>
-            개인정보보호 책임자 : 정종민대표이메일 : cjcgvmaster@cj.netCGV고객센터 : 1544-1122
+            Copyright Universal Music Enterprises
+            Privacy Policy
+            Terms & Conditions
+            Do Not Sell My Personal Information
+            
         </address>
         <!-- 3-2.sns버튼 -->
         <ul class="sns">
