--- a/CGV응용/index.html
+++ b/CGV응용/index.html
@@ -150,8 +150,12 @@
                 </li>
             </ul>
         </nav>
-        <img src="images/p1.png" class="p1" alt="">
-        <img src="images/p1.png" class="p2" alt="">
+        <img src="images/p1.png" class="p1" alt="핀이미지1">
+        <img src="images/p1.png" class="p2" alt="핀이미지2">
+        <img src="images/p1.png" class="p3" alt="핀이미지3">
+        <img src="images/p1.png" class="p4" alt="핀이미지4">
+        <img src="images/p1.png" class="p5" alt="핀이미지5">
+        <img src="images/p1.png" class="p6" alt="핀이미지6">
     </main>
     <!-- 3. 하단영역 -->
     <footer id="info" class="part">
@@ -163,12 +167,12 @@
         <!-- 3-2.sns버튼 -->
         <ul class="sns">
             <li>
-                <a href="https://www.facebook.com/CJCGV" target="_blank" title="페이스북 바로가기">
+                <a href="https://ko-kr.facebook.com/seouljazzfestival/" target="_blank" title="페이스북 바로가기">
                     <span class="bld">페이스북 바로가기</span>
                 </a>
             </li>
             <li>
-                <a href="https://twitter.com/cj_cgv" target="_blank" title="트위터 바로가기">
+                <a href="https://twitter.com/seoul_jazz" target="_blank" title="트위터 바로가기">
                     <span class="bld">트위터바로가기</span>
                 </a>
             </li>
