--- a/CGV응용/index.html
+++ b/CGV응용/index.html
@@ -123,29 +123,29 @@
                 </li>
                 <li>
                     <a href="#" onclick="gogo('wHGAMjwr_j8');return false;">
-                        <img src="images/bslp.png" class="lp2" alt="검은색LP">
+                        <img src="images/bslp.png" class="lp" alt="검은색LP">
                     </a>
                 </li>
                 <li>
                     <a href="#" onclick="gogo('DeevW_zYojY');return false;">
             
-                        <img src="images/oslp.png" class="lp3" alt= "오렌지색LP">
+                        <img src="images/oslp.png" class="lp" alt= "오렌지색LP">
                     </a>
                 </li>
                 <li>
                     <a href="#" onclick="gogo('JIkRvI7lF08');return false;">
-                        <img src="images/bslp.png" class="lp4" alt= "검은색LP">
+                        <img src="images/bslp.png" class="lp" alt= "검은색LP">
                     </a>
                 </li>
                 <li>
                     <a href="#" onclick="gogo('uZpHNG4pSus');return false;">
-                        <img src="images/oslp.png" class="lp5" alt= "오렌지색LP">
+                        <img src="images/oslp.png" class="lp" alt= "오렌지색LP">
 
                     </a>
                 </li>
                 <li>
                     <a href="#" onclick="gogo('cZag0E32is0');return false;">
-                        <img src="images/bslp.png" class="lp6" alt= "검은색LP">
+                        <img src="images/bslp.png" class="lp" alt= "검은색LP">
                     </a>
                 </li>
             </ul>
