--- a/008.VOGUE_PJ 10.15완/002.site/index.html
+++ b/008.VOGUE_PJ 10.15완/002.site/index.html
@@ -125,10 +125,10 @@
                             <input type="radio" name="slide" id="slide3">
                             <input type="radio" name="slide" id="slide4">
                             <ul id="imgholder" class="imgs">
-                                <li><img src="images/img:1.jpg"></li>
-                                <li><img src="images/img:2.jpg"></li>
-                                <li><img src="images/img:3.jpg"></li>
-                                <li><img src="images/img:4.jpg"></li>
+                                <li><img src="images/img1.jpg"></li>
+                                <li><img src="images/img2.jpg"></li>
+                                <li><img src="images/img3.jpg"></li>
+                                <li><img src="images/img4.jpg"></li>
 
                                 <div class="bullets">
                                     <label for="slide1">&nbsp;</label>
