--- a/008.VOGUE_PJ 10.15완/002.site/index.html
+++ b/008.VOGUE_PJ 10.15완/002.site/index.html
@@ -1,6 +1,5 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="ko">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,7 +14,6 @@
     <script src="js/linksys.js"></script>
     <script src="js/common.js"></script>
 </head>
-
 <body>
     <!-- 1. 상단영역 -->
     <div id="top">
@@ -116,28 +114,32 @@
     </div>
     <!-- 2. 메인영역 -->
     <div class="bgc">
-        <main class="cont ibx">
+        
             <section class="pt1 rbx">
                 <div class="rbxIn">
                     <div class="cbx bgi bg1 slider">
-                            <input type="radio" name="slide" id="slide1" checked>
-                            <input type="radio" name="slide" id="slide2">
-                            <input type="radio" name="slide" id="slide3">
-                            <input type="radio" name="slide" id="slide4">
-                            <ul id="imgholder" class="imgs">
-                                <li><img src="images/img1.jpg"></li>
-                                <li><img src="images/img2.jpg"></li>
-                                <li><img src="images/img3.jpg"></li>
-                                <li><img src="images/img4.jpg"></li>
+                        <!-- <h2>복싱과 맺은 모델 수주의 이야기</h2> -->
+                        <input type="radio" name="slide" id="slide1" checked>
+                        <input type="radio" name="slide" id="slide2">
+                        <input type="radio" name="slide" id="slide3">
+                        <input type="radio" name="slide" id="slide4">
+                        <ul id="imgholder" class="imgs">
+                            <li><img src="images/img1.jpg"></li>
+                            <li><img src="images/img2.jpg"></li>
+                            <li><img src="images/img3.jpg"></li>
+                            <li><img src="images/img4.jpg"></li>
 
-                                <div class="bullets">
-                                    <label for="slide1">&nbsp;</label>
-                                    <label for="slide2">&nbsp;</label>
-                                    <label for="slide3">&nbsp;</label>
-                                    <label for="slide4">&nbsp;</label>
-                                </div>
+                            <div class="bullets">
+                                <label for="slide1">&nbsp;</label>
+                                <label for="slide2">&nbsp;</label>
+                                <label for="slide3">&nbsp;</label>
+                                <label for="slide4">&nbsp;</label>
+                            </div>
+            </div>
+                    </div>
                 </div>
             </section>
+        <main class="cont ibx">
             <section class="pt2 rbx">
                 <div class="rbxIn">
                     <div class="cbx bgi bg2">
@@ -153,9 +155,8 @@
             </section>
             <section class="pt1 rbx">
                 <div class="rbxIn">
-                    <div class="cbx bgi bg5 slider">
+                    <div class="cbx bgi bg5">
                         <h2>&lt;퀸스 갬빗&gt; 이후 엄청난 신작을 준비 중인 안야 테일러 조이</h2>
-                </div>
                     </div>
                 </div>
             </section>
@@ -216,8 +217,7 @@
             </div>
             <!-- 3-2. 회사주소 -->
             <address class="addr">
-                WWW.VOGUE.COM Ⓒ CONDÉNAST ASIA PACIFIC. INC. ALL RIGHTS RESERVED. VOGUE.COM KOREA IS OPERATED BY DOOSAN
-                MAGAZINE.
+                WWW.VOGUE.COM Ⓒ CONDÉNAST ASIA PACIFIC. INC. ALL RIGHTS RESERVED. VOGUE.COM KOREA IS OPERATED BY DOOSAN MAGAZINE.
             </address>
             <!-- 3-3. 하단링크 -->
             <ul class="blink">
@@ -236,11 +236,10 @@
             </ul>
         </footer>
     </div>
-    <!-- 위로가기 버튼 -->
-    <a href="#" class="tbtn fi fi-angle-up">
-        <span class="ir">위로가기버튼</span>
-    </a>
+            <!-- 위로가기 버튼 -->
+            <a href="#" class="tbtn fi fi-angle-up">
+                <span class="ir">위로가기버튼</span>
+            </a>
 
 </body>
-
 </html>
