--- a/008.VOGUE_PJ 10.15완/002.site/index.html
+++ b/008.VOGUE_PJ 10.15완/002.site/index.html
@@ -114,7 +114,7 @@
     </div>
     <!-- 2. 메인영역 -->
     <div class="bgc">
-        
+        <main class="cont ibx">
             <section class="pt1 rbx">
                 <div class="rbxIn">
                     <div class="cbx bgi bg1 slider">
@@ -139,7 +139,7 @@
                     </div>
                 </div>
             </section>
-        <main class="cont ibx">
+            <main class="cont ibx">
             <section class="pt2 rbx">
                 <div class="rbxIn">
                     <div class="cbx bgi bg2">
@@ -206,6 +206,7 @@
                     </div>
                 </div>
             </section>
+        </main>
         </main>
     </div>
     <!-- 3. 하단영역 -->
